Searches styling tidy

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -522,7 +522,6 @@ footer h3,
   }
   .mdc-form-field {
     .mdc-radio {
-      top: $unit*.9;
       .mdc-radio__outer-circle {
         border-color: $mdc-theme-primary !important;
       }
@@ -536,15 +535,15 @@ footer h3,
   margin-bottom: $unit*1.5;
   .settings {
     float: none;
-    .mdc-form-field .mdc-radio {
-      top: auto !important;
-    }
   }
 }
 .goodmoves-saved-searches {
   .settings {
     .mdc-form-field {
       display: inline;
+      .mdc-radio {
+        top: $unit*.9;
+      }
     }
   }
   .mdc-list {
