--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -391,6 +391,7 @@ footer h3,
     min-height: 40vh;
     max-width: 500px;
     margin: 0 auto;
+    position: relative;
   }
   .middle-line-text {
     margin: $unit*2 0 $unit;
@@ -419,18 +420,6 @@ footer h3,
       top: .6rem;
       left: .5rem;
     }
-  }
-  #continue-with-google {
-    background-color: #dd4b39;
-  }
-  #continue-with-twitter {
-    background-color: #0084b4;
-  }
-  #continue-with-facebook {
-    background-color: #3b5998;
-  }
-  .mdc-card {
-    position: relative;
   }
   #sign-in-message,
   #sign-up-message {
@@ -660,6 +649,22 @@ a:hover {
 .mdc-chip.mdc-chip--selected:hover {
   background-color: $mdc-theme-primary-dark;
   color: white;
+}
+
+.provider-google.mdc-chip--selected,
+.provider-google.mdc-chip--selected:hover,
+#continue-with-google {
+  background-color: #dd4b39 !important;
+}
+.provider-twitter.mdc-chip--selected,
+.provider-twitter.mdc-chip--selected:hover,
+#continue-with-twitter {
+  background-color: #0084b4 !important;
+}
+.provider-facebook.mdc-chip--selected,
+.provider-facebook.mdc-chip--selected:hover,
+#continue-with-facebook {
+  background-color: #3b5998 !important;
 }
 
 .noselect {
