--- a/sites/configurations/goodmoves/partials/email-frequency.hbs
+++ b/sites/configurations/goodmoves/partials/email-frequency.hbs
@@ -21,7 +21,7 @@
       <label for="weekly">Weekly</label>
     </div>
   {{else}}
-    You currently have no saved searches
+    You have no saved searches.
   {{/with}}
 {{/if}}
 
