--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -113,7 +113,7 @@
           <h3 class="mdc-typography--headline6">
             Linked accounts
           </h3>
-          <div class="v-margin">
+          <div class="v-margin-full">
             {{#each (split "google,facebook,twitter" ",") ~}}
               <div class="v-margin">
                 {{> linkChip
