--- a/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
@@ -1,8 +1,14 @@
 {{> vacancy_search_form this instance_id="perm"}}
 
 <div id="detailed-results-container" class="container-content goodmoves-shortlist">
-  {{#compare data.shortlist.open.hits.total "===" 0}}
-  {{#compare data.shortlist.closed.hits.total "===" 0}}
+  {{#compare data.shortlist.open.hits.total ">" 0}}
+  <div class="t-margin-full pull-right">
+    <div class="t-margin">
+      {{> shortlist_alerts}}
+    </div>
+  </div>
+  {{else}}
+  {{#compare data.shortlist.closed.hits.total ">" 0}}
   <div class="t-margin-full pull-right">
     <div class="t-margin">
       {{> shortlist_alerts}}
