--- a/sites/configurations/goodmoves/templates/account/settings.hbs
+++ b/sites/configurations/goodmoves/templates/account/settings.hbs
@@ -57,7 +57,7 @@
               Stop all emails
             </a>
           {{else}}
-            You currently have no subscriptions
+            You currently have no subscriptions.
           {{/ifAny}}
         </div>
       </div>
