--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -493,6 +493,23 @@ footer h3,
     }
   }
 }
+@media screen and (max-width: 1100px) {
+  .goodmoves-vacancy-search .head {
+    .mdc-layout-grid__cell.action {
+      grid-column-end: span 6;
+    }
+    .mdc-layout-grid__cell.pagination-desktop {
+      display: none;
+    }
+    .mdc-layout-grid__cell.pagination-mobile {
+      display: block;
+      .pagination {
+        margin-top: -$unit;
+      }
+    }
+  }
+}
+
 .goodmoves-settings-account {
   .mdc-button {
     width: 100%;
@@ -1108,6 +1125,7 @@ a {
     margin: 0 $unit/2 $unit/4 0;
   }
 }
+.pagination-mobile,
 .top-jobs .mdc-card__info--vacancy-title .top-job,
 .goodmoves-organisation .mdc-card.list .mdc-card__info--vacancy-organisation {
   display: none !important;
@@ -1651,7 +1669,6 @@ footer,
   .banner-search.overlay {
     display: block;
     .content {
-      background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 47%, transparent 47.08%, transparent);
       min-height: 40vh;
       background-color: transparent;
       padding: 0 0 $unit*2;
@@ -1732,53 +1749,25 @@ footer,
     }
   }
 }
-.home-banner.option-2 {
-  .banner-search,
-  .banner-search .page-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .page-content {
-    padding: $unit/2 $unit*1.25 $unit;
-    border-radius: 2px;
-    .mdc-text-field--box::before, .mdc-text-field--box::after {
-      width: 100%;
-    }
-    .mdc-button--search {
-      border-radius: 2px;
-      width: 100%;
-      .fa-search {
-        position: absolute;
-        right: $unit*(2/3);
-      }
-    }
-    .mdc-button--raised {
-      width: 100%;
-      .far {
-        position: absolute;
-        right: $unit/2;
-      }
-    }
-    .mdc-menu--open {
-      z-index: 100;
-    }
+@media screen and (min-width: $desktop-landscape-breakpoint + 1) {
+  .home-banner .banner-search.overlay .content {
+    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 47%, transparent 47.08%, transparent);
   }
 }
-.home-banner.option-3 {
-  .banner-search {
-    .content {
-      padding: 0;
-      display: flex;
-      justify-content: left;
-      align-items: center;
-      width: 100%;
-      .search-form {
-        width: 50%;
-        margin: 0;
-        padding: 0 $unit $unit;
-      }
-    }
+@media screen and (min-width: $mobile-landscape-breakpoint + 1) {
+  .home-banner .banner-search.overlay .content {
+    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 57%, transparent 57.08%, transparent);
+  }
+}
+@media screen and (min-width: $mobile-breakpoint + 1) and (max-width: $mobile-landscape-breakpoint) {
+  .home-banner .banner-search.overlay .content {
+    background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 77%, transparent 77.08%, transparent);
+  }
+}
+@media screen and (max-width: $mobile-breakpoint) {
+  .home-banner .banner-search.overlay .content {
+    background-image: none;
+    background-color: rgba(66, 132, 42, 0.89);
   }
 }
 
@@ -2218,14 +2207,6 @@ form.inline-form {
 }
 
 @media screen and (max-width: $mobile-landscape-breakpoint + 1) {
-  .home-banner {
-    .banner-search.overlay {
-      .content {
-        background-image: none;
-        background-color: rgba(66, 132, 42, 0.89);
-      }
-    }
-  }
 }
 
 @media screen and (min-width: $mobile-breakpoint + 1) and (max-width: $mobile-landscape-breakpoint) {
