Styling and minor text changes

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1396,8 +1396,8 @@ body {
         white-space: nowrap;
         vertical-align: baseline;
         border-radius: $unit;
-        background-color: $mdc-theme-primary !important;
-        color: white;
+        background-color: $mdc-theme-primary-light !important;
+        color: black;
         position: relative;
         top: -2px;
         left: 0;
@@ -1445,7 +1445,7 @@ body {
     height: auto;
     display: flex;
     align-items: top;
-    margin: 0 0 0 $unit;
+    margin: $unit/2 0 0 $unit;
     padding: 0;
     img {
       width: 100%;
@@ -1457,6 +1457,11 @@ body {
   .mdc-card.list {
     .mdc-card__media--organisation {
       display: none;
+    }
+  }
+  .mdc-card {
+    .mdc-card__media--organisation {
+      margin-top: 0;
     }
   }
 }
