--- a/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
@@ -42,7 +42,12 @@
             {{#if closing_date ~}}
             <li class="mdc-card__info--vacancy-closing mdc-typography--body1">
               <span class="fa-li"><span class="far fa-calendar-alt fa-fw" title="Closing date"></span></span>
-              Closing {{{momentFormat (moment closing_date "x") "Do MMMM YYYY"}}}
+              {{#compare vacancy_status "===" "vacancy-closed" ~}}
+              Closed
+              {{else}}
+              Closing
+              {{/compare ~}}
+              {{{momentFormat (moment closing_date "x") "Do MMMM YYYY"}}}
             </li>
             {{/if ~}}
           </ul>
