--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -502,7 +502,7 @@ footer h3,
       display: none;
     }
     .mdc-layout-grid__cell.pagination-mobile {
-      display: block;
+      display: block !important;
       .pagination {
         margin-top: -$unit;
       }
