--- a/sites/configurations/goodmoves/partials/shortlist-alerts.hbs
+++ b/sites/configurations/goodmoves/partials/shortlist-alerts.hbs
@@ -5,7 +5,7 @@
       onMethod="POST"
       offUrl="/toggle-shortlist-subscription"
       offMethod="POST"
-      onText="Stop sending 'closing soon' alerts"
+      onText="Send 'closing soon' alerts"
       offText="Send 'closing soon' alerts"
       iconClasses="far fa-envelope"
       on=this.subscribed
