--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -133,7 +133,7 @@
       {{#> ajax_chip
         onUrl="/toggle-subscription"
         offUrl="/toggle-subscription"
-        onText="Don't send jobs matching this search by email"
+        onText="Send jobs matching this search by email"
         offText="Send jobs matching this search by email"
         onMethod="POST"
         offMethod="POST"
