Added a bottom margin to the active snackbar

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2206,6 +2206,10 @@ form.inline-form {
   z-index: 1000;
 }
 
+.mdc-snackbar--active {
+  margin-bottom: $unit;
+}
+
 @media screen and (max-width: $mobile-breakpoint) {
   .mdc-toolbar-fixed-adjust {
     padding-top: $header-upper-height;
