--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -13,7 +13,7 @@ $mdc-theme-footer: #37474F; // Blue Gray 800
 $mdc-theme-footer-light: #455A64; // Blue Gray 700
 $mdc-theme-footer-dark: #263238; // Blue Gray 900
 
-$mdc-theme-error: #dd4b39;
+$mdc-theme-error: #A9201E;
 
 $mdc-theme-tfn: #3b9db1;
 
@@ -287,6 +287,7 @@ footer h3,
 .mdc-simple-menu .mdc-list-item,
 .mdc-temporary-drawer .mdc-list-item,
 .mdc-drawer--temporary .mdc-list-item,
+.mdc-snackbar__text,
 .gm-style-iw,
 .mdc-list {
   font-family: $base-font-family, Helvetica, Arial, sans-serif;
@@ -671,17 +672,17 @@ a:hover {
 .provider-google.mdc-chip--selected,
 .provider-google.mdc-chip--selected:hover,
 #continue-with-google {
-  background-color: #dd4b39 !important;
+  background-color: #DB3633 !important;
 }
 .provider-twitter.mdc-chip--selected,
 .provider-twitter.mdc-chip--selected:hover,
 #continue-with-twitter {
-  background-color: #0084b4 !important;
+  background-color: #007DA3 !important;
 }
 .provider-facebook.mdc-chip--selected,
 .provider-facebook.mdc-chip--selected:hover,
 #continue-with-facebook {
-  background-color: #3b5998 !important;
+  background-color: #2C5797 !important;
 }
 
 .noselect {
@@ -2204,10 +2205,6 @@ form.inline-form {
 
 #app-snackbar {
   z-index: 1000;
-}
-
-.mdc-snackbar--active {
-  margin-bottom: $unit;
 }
 
 @media screen and (max-width: $mobile-breakpoint) {
