--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1760,7 +1760,7 @@ footer,
     background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 47%, transparent 47.08%, transparent);
   }
 }
-@media screen and (min-width: $mobile-landscape-breakpoint + 1) {
+@media screen and (min-width: $mobile-landscape-breakpoint + 1) and (max-width: $desktop-landscape-breakpoint) {
   .home-banner .banner-search.overlay .content {
     background-image: linear-gradient(60deg, rgba(66, 132, 42, 0.89), rgba(66, 132, 42, 0.91) 57%, transparent 57.08%, transparent);
   }
