--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2205,6 +2205,13 @@ form.inline-form {
 
 #app-snackbar {
   z-index: 1000;
+  background-color: $mdc-theme-primary-dark;
+  .mdc-snackbar__text {
+    padding: 0;
+  }
+  .mdc-snackbar__action-wrapper {
+    display: none;
+  }
 }
 
 @media screen and (max-width: $mobile-breakpoint) {
