--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -339,7 +339,7 @@ if(location.host.indexOf('.local') > -1){
         </div>
       </footer>
     </div>
-    <div class="mdc-snackbar"
+    <div class="mdc-snackbar mdc-elevation--z10"
          aria-live="assertive"
          aria-atomic="true"
          aria-hidden="true"
