--- a/sites/configurations/goodmoves/partials/email-frequency.hbs
+++ b/sites/configurations/goodmoves/partials/email-frequency.hbs
@@ -36,13 +36,13 @@
         dataType: 'html',
         success: function(data, status, xhr) {
           goodmoves.snackbarShow({
-            message: 'Email frequency updated'
+            message: 'New jobs alert email frequency changed to '+evt.currentTarget.id
           });
         },
         error: function(xhr, status, error) {
           goodmoves.snackbarShow({
-            message: 'Failed to update email frequency',
-            backgroundColor: '#dd4b39'
+            message: 'Failed to change email frequency to '+evt.currentTarget.id,
+            backgroundColor: '#A9201E'
           });
         }
       };
