Show profile image if it exists from social profile

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -208,6 +208,11 @@ header {
     }
     .mdc-top-app-bar__section {
       padding: 0;
+      .mdc-menu-anchor {
+        .user-avatar {
+          border-radius: 50%;
+        }
+      }
       .mdc-top-app-bar__action-item {
         height: $header-lower-height;
         color: $mdc-theme-secondary !important;
