--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -162,7 +162,11 @@ if(location.host.indexOf('.local') > -1){
               {{#if data.auth ~}}
               <div class="mdc-menu-anchor">
                 <button class="mdc-button" data-menu-target="#user-menu">
+                  {{#if data.auth.photoURL ~}}
+                  <img src="{{data.auth.photoURL}}" class="far fa-fw user-avatar" />
+                  {{else}}
                   <span class="far fa-fw fa-user-circle"></span>
+                  {{/if ~}}
                   {{{data.auth.email}}}
                   <span class="far fa-fw fa-angle-down"></span>
                 </button>
