--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -586,11 +586,33 @@ footer h3,
 }
 
 #google_translate_element {
-  margin-top: $unit/4;
-  .goog-te-menu-value:hover {
-    text-decoration: none;
-    color: black;
+  // margin-top: $unit/4;
+  .goog-te-gadget-simple {
+    background: transparent;
+    border: none;
+    // .goog-te-gadget-icon {
+    //   display: none;
+    // }
+    .goog-te-menu-value {
+      color: white;
+      // margin: 0;
+      span {
+        border: none !important;
+        color: white !important;
+      }
+      img,
+      span:last-child {
+        display: none;
+      }
+    }
+    .goog-te-menu-value:hover {
+      text-decoration: underline;
+      color: white;
+    }
   }
+}
+.goog-te-menu-frame {
+  box-shadow: none;
 }
 
 .x-items {
