--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -210,6 +210,8 @@ header {
       padding: 0;
       .mdc-menu-anchor {
         .user-avatar {
+          height: 30px;
+          width: 30px;
           border-radius: 50%;
         }
       }
