--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -25,11 +25,11 @@
     <h2 class="mdc-drawer__content-heading hide-sm">Search jobs</h2>
     <div id="search-tab-bar" class="mdc-tab-bar mdc-tab-bar--fullwidth search-tab-bar" data-mdc-auto-init="MDCTabBar">
       <a href="/search{{request.url.search}}" class="mdc-tab {{#compare request.url.pathname "/search"}}mdc-tab--active{{/compare}} details-tab" id="detailed-results">
-        <span class="far fa-list fa-fw" title="Location"></span>
+        <span class="far fa-list fa-fw" title="List"></span>
         List
       </a>
       <a href="/map{{request.url.search}}" class="mdc-tab {{#compare request.url.pathname "/map"}}mdc-tab--active{{/compare}} map-tab">
-        <span class="far fa-map-marker-alt fa-fw" title="Location"></span>
+        <span class="far fa-map-marker-alt fa-fw" title="Map"></span>
         Map
       </a>
       <span class="mdc-tab-bar__indicator"></span>
