--- a/sites/configurations/scvo/partials/sidebar-cjs-search.hbs
+++ b/sites/configurations/scvo/partials/sidebar-cjs-search.hbs
@@ -1,20 +1,53 @@
 <h2 class="mdc-card__title mdc-card__title--large">Search vacancies</h2>
-<form action="/jobs/community-jobs-scotland/vacancies/{{request.params.phase}}" method="GET" [searchroute]="'cjs_job_search'" data-auto-search="true">
-  <div class="mdc-textfield mdc-textfield--upgraded">
-    <label class="mdc-textfield__label" for="q">Keywords</label>
-    <input type="text" class="mdc-textfield__input" name="q" id="jobs-keywords" placeholder="" value="{{request.params.query.q}}">
+<form action="/jobs/community-jobs-scotland/vacancies/{{request.params.phase}}" method="GET" [searchroute]="'cjs_job_search'" data-auto-search="false">
+  <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+    <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
+    <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" name="q" id="keywords" data-lpignore="true" placeholder="" value="{{request.params.query.q}}">
+    <label class="mdc-floating-label mdc-floating-label--float-above" for="q">Keywords</label>
   </div>
-  <div class="mdc-textfield mdc-textfield--upgraded">
-    <label class="mdc-textfield__label" for="job_number">Job number</label>
-    <input type="text" class="mdc-textfield__input" name="job_number" id="jobs-job_number" placeholder="" value="{{request.params.query.job_number}}">
+  <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+    <span class="far fa-hashtag mdc-text-field__icon" tabindex="0" role="button"></span>
+    <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" name="job_number" id="job_number" data-lpignore="true" placeholder="" value="{{request.params.query.job_number}}">
+    <label class="mdc-floating-label mdc-floating-label--float-above" for="job_number">Job number</label>
   </div>
-  <div class="mdc-textfield mdc-textfield--upgraded">
+  <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+    <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
+    <input type="text" id="location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.location}}" placeholder="" data-lpignore="true" data-location-options='
+      {
+        "types": ["(regions)"],
+        "componentRestrictions": {
+          "country": "gb"
+        }
+      }' data-location-lat="[name='lat']" data-location-lng="[name='lng']">
+    <label class="mdc-floating-label mdc-floating-label--float-above" for="location">
+      Location
+    </label>
+    <div class="mdc-line-ripple"></div>
+  </div>
+  <div class="mdc-form-field mdc-select mdc-select--box" data-mdc-auto-init="MDCSelect">
+    <select class="mdc-select__native-control" id="distance" name="distance">
+      <option value="8046.72"{{#compare request.params.query.distance "8046.72"}} selected{{/compare}}>5 miles</option>
+      <option value="16093.44"{{#compare request.params.query.distance "16093.44"}} selected{{/compare}}>10 miles</option>
+      <option value="40233.6"{{#compare request.params.query.distance "40233.6"}} selected{{/compare}}>25 miles</option>
+      <option value="80467.2"{{#compare request.params.query.distance "80467.2"}} selected{{/compare}}>50 miles</option>
+      <option value=""{{#compare request.params.query.distance ""}} selected{{/compare}}>no limit</option>
+    </select>
+    <label class="mdc-floating-label mdc-floating-label--float-above" for="distance">
+      Within
+    </label>
+  </div>
+
+  {{#if request.params.query.location ~}}
+  <input type="hidden" name="lat" value="{{request.params.query.lat}}" id="lat">
+  <input type="hidden" name="lng" value="{{request.params.query.lng}}" id="lng">
+  {{/if ~}}
+
+  <!-- <div class="mdc-textfield mdc-textfield--upgraded">
     <label class="mdc-textfield__label" for="location">Location</label>
-    <input type="text" class="mdc-textfield__input" name="location" id="jobs-location" placeholder="" value="{{request.params.query.location}}">
-  </div>
-  <div class="mdc-form-field">
-    <label class="mdc-textfield__label" for="sector">Sector</label>
-    <select class="mdc-select" role="listbox" id="jobs-sector" name="sector">
+    <input type="text" class="mdc-textfield__input" name="location" id="location" placeholder="" value="{{request.params.query.location}}">
+  </div> -->
+  <div class="mdc-form-field mdc-select mdc-select--box" data-mdc-auto-init="MDCSelect">
+    <select class="mdc-select__native-control" role="listbox" id="sector" name="sector">
       <option value="" {{#if request.params.query.sector}}{{else}}selected{{/if}}>All sectors</option>
       <option value="administration-reception" {{#compare request.params.query.sector "===" "administration-reception"}}selected{{/compare}}>Administration/Reception</option>
       <option value="advocacy-advice" {{#compare request.params.query.sector "===" "advocacy-advice"}}selected{{/compare}}>Advocacy/Advice</option>
@@ -60,10 +93,10 @@
       {{/if}}
       {{/each}} -->
     </select>
+    <label class="mdc-floating-label mdc-floating-label--float-above" for="sector">Sector</label>
   </div>
-  <div class="mdc-form-field">
-    <label class="mdc-textfield__label" for="jobs-region">Region</label>
-    <select class="mdc-select" role="listbox" id="region" name="region">
+  <div class="mdc-form-field mdc-select mdc-select--box" data-mdc-auto-init="MDCSelect">
+    <select class="mdc-select__native-control" role="listbox" id="region" name="region">
       <option value="" {{#if request.params.query.region}}{{else}}selected{{/if}}>All regions</option>
       <option value="aberdeen-city" {{#compare request.params.query.region "===" "aberdeen-city"}}selected{{/compare}}>Aberdeen</option>
       <option value="aberdeenshire" {{#compare request.params.query.region "===" "aberdeenshire"}}selected{{/compare}}>Aberdeenshire</option>
@@ -103,6 +136,7 @@
       {{/if}}
       {{/each}} -->
     </select>
+    <label class="mdc-floating-label mdc-floating-label--float-above" for="region">Region</label>
   </div>
   <button class="mdc-button mdc-button--raised" type="submit">
     Search jobs
