--- a/sites/configurations/scvo/partials/sidebar-library-search.hbs
+++ b/sites/configurations/scvo/partials/sidebar-library-search.hbs
@@ -1,15 +1,19 @@
 <form action="/policy-research/evidence-library" method="GET" [searchroute]="'evidence_library_document_search'" data-auto-search="true" autocomplete="off">
-  <div class="mdc-textfield mdc-textfield--upgraded">
-    <input type="text" class="mdc-textfield__input" name="q" id="evidence-library-keywords" value="{{request.params.query.q}}" placeholder="Keywords">
-    <div class="mdc-textfield__bottom-line"></div>
+  <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+    <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
+    <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" name="q" id="evidence-library-keywords" value="{{request.params.query.q}}" placeholder="">
+    <label class="mdc-floating-label mdc-floating-label--float-above" for="q">Keywords</label>
   </div>
-  <div class="mdc-form-field">
-    <select class="mdc-select" role="listbox" id="evidence-library-classification" name="classification">
+  <div class="mdc-form-field mdc-select mdc-select--box" data-mdc-auto-init="MDCSelect">
+    <select class="mdc-select__native-control" id="evidence-library-classification" name="classification">
       <option value="" {{#if request.params.query.classification}}{{else}}selected{{/if}}>All categories</option>
       {{#each data.supplimentaryResponses.types.aggregations.types.buckets ~}}
       <option value="{{slugify key}}" {{#compare ../request.params.query.classification "===" (slugify key)}}selected{{/compare}}>{{key}} ({{doc_count}})</option>
       {{/each ~}}
     </select>
+    <label class="mdc-floating-label mdc-floating-label--float-above" for="evidence-library-classification">
+      Category
+    </label>
   </div>
   <button class="mdc-button mdc-button--raised" type="submit">
     Search
