Added distance to results

--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -262,7 +262,7 @@
 </div>
 
 {{#each data.search_data.detailed_results.hits.hits ~}}
-{{> vacancy_search_result _source}}
+{{> vacancy_search_result _source sort=sort}}
 {{/each ~}}
 
 <div class="foot">
