--- a/sites/configurations/goodmoves/layouts/default.hbs
+++ b/sites/configurations/goodmoves/layouts/default.hbs
@@ -56,13 +56,13 @@ gtag('event', 'document_hit', {
 });
 {{/each ~}}
 
-{{#if request.params.query.debug ~}}
+{{#ifAny request.params.query.debug (compare request.url.hostname "goodmoves.local") ~}}
 console.log('#### DEBUG MODE ON ####');
 console.log('Request:', {{{regexReplace (regexReplace (stringify request) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
 console.log('Route:', {{{regexReplace (regexReplace (stringify route) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
 console.log('Data:', {{{regexReplace (regexReplace (stringify data) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
 console.log('Menus:', {{{regexReplace (regexReplace (stringify context.metaData.menus) "(<\/script)" "gi" '</scr\" + \"ipt') "(\r|\n)" "gi" ""}}});
-{{/if ~}}
+{{/ifAny ~}}
 </script>
 <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
 <link type="text/css" rel="stylesheet" href="/assets/css/goodmoves-styles.css">
