--- a/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/key-info.hbs
@@ -23,6 +23,12 @@
               {{location}}
             </li>
             {{/if ~}}
+            {{#if sort.[0] ~}}
+              <li class="mdc-card__info--vacancy-status mdc-typography--body1">
+                <span class="fa-li"><span class="far fa-ruler fa-fw" title="Distance"></span></span>
+                {{toFixed sort.[0] 2}} miles from {{@root.request.params.query.location}}
+              </li>
+            {{/if ~}}
             {{#if role_status_list ~}}
             <li class="mdc-card__info--vacancy-status mdc-typography--body1">
               <span class="fa-li"><span class="far fa-clock fa-fw" title="Status"></span></span>
