Hide location search for now (CJS)

--- a/sites/configurations/scvo/partials/sidebar-cjs-search.hbs
+++ b/sites/configurations/scvo/partials/sidebar-cjs-search.hbs
@@ -62,7 +62,7 @@
     <label class="mdc-floating-label mdc-floating-label--float-above" for="sector">Sector</label>
   </div>
 
-  <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+  <!-- <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
     <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
     <input type="text" id="location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth" value="{{request.params.query.location}}" placeholder="" data-lpignore="true" data-location-options='
       {
@@ -88,7 +88,7 @@
     <label class="mdc-floating-label mdc-floating-label--float-above" for="distance">
       Within
     </label>
-  </div>
+  </div> -->
 
   {{#if request.params.query.location ~}}
   <input type="hidden" name="lat" value="{{request.params.query.lat}}" id="lat">
