--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -845,6 +845,9 @@ a {
       margin-right: $unit;
       color: $mdc-theme-primary-dark;
     }
+    ul.mdc-card__action {
+      cursor: default;
+    }
     .mdc-card__action:last-child {
       margin-right: 0;
     }
