--- a/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
@@ -9,6 +9,16 @@
   {{/if}}
   <div class="mdc-card__actions">
     <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
+      {{#compare @root.request.params.query.sort "===" "distance" ~}}
+      {{#if sort.[0] ~}}
+      <ul class="fa-ul mdc-card__action">
+        <li class="mdc-card__info--vacancy-status mdc-typography--body1">
+          <span class="fa-li"><span class="far fa-location-arrow fa-fw" title="Distance"></span></span>
+          Within {{inflect (round sort.[0] "up") "mile" "miles" true}} of {{@root.request.params.query.location}}
+        </li>
+      </ul>
+      {{/if ~}}
+      {{/compare ~}}
       <a href="/vacancy/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
     </div>
     <div class="mdc-card__action-icons pull-right">
