--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -231,6 +231,7 @@
       {{> pagination paging=data.search_data.detailed_results.pagination}}
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone action">
+      {{#compare data.search_data.detailed_results.hits.total ">" 0 ~}}
       <form action="{{{request.url.path}}}" method="GET">
         <input type="hidden" name="keywords" value="{{request.params.query.keywords}}" />
         <input type="hidden" name="location" value="{{request.params.query.location}}" />
@@ -254,6 +255,7 @@
           </label>
         </div>
       </form>
+      {{/compare ~}}
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone pagination-mobile">
       {{> pagination paging=data.search_data.detailed_results.pagination}}
@@ -262,7 +264,7 @@
 </div>
 
 {{#each data.search_data.detailed_results.hits.hits ~}}
-{{> vacancy_search_result _source sort=sort}}
+{{> vacancy_search_result _source sort=sort distance=fields.distance.[0]}}
 {{/each ~}}
 
 <div class="foot">
