Fixed email toggle in saved search

--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -142,10 +142,10 @@
       }}
       {
         "onData": {
-          "name": {{{stringify name}}}
+          "name": {{{stringify ../name}}}
         },
         "offData": {
-          "name": {{{stringify name}}}
+          "name": {{{stringify ../name}}}
         }
       }
       {{/ajax_chip}}
