--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2170,14 +2170,14 @@ form.inline-form {
   .mdc-layout-grid__cell.top-jobs {
     margin: 0 $unit/2;
   }
-  .mdc-layout-grid__cell.shortlist-jobs:first-child,
-  .mdc-layout-grid__cell.latest-jobs:first-child,
-  .mdc-layout-grid__cell.top-jobs:first-child {
-    margin-left: $unit*3;
-  }
-  .last-card {
-    padding-right: $unit*2.5;
-  }
+  // .mdc-layout-grid__cell.shortlist-jobs:first-child,
+  // .mdc-layout-grid__cell.latest-jobs:first-child,
+  // .mdc-layout-grid__cell.top-jobs:first-child {
+  //   margin-left: $unit*3;
+  // }
+  // .last-card {
+  //   padding-right: $unit*2.5;
+  // }
   .mdc-card.align-centre {
     box-shadow: none;
     width: 18vw !important;
@@ -2209,7 +2209,7 @@ form.inline-form {
   align-self: center;
   width: $unit*3;
   z-index: 2;
-  opacity: 0.4;
+  opacity: 0.7;
   transition: opacity .1s ease-in-out;
   color: $mdc-theme-primary;
   cursor: pointer;
@@ -2219,11 +2219,11 @@ form.inline-form {
   opacity: 1;
 }
 .scroll-left {
-  left: $unit/2;
+  left: $unit;
   background: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
 }
 .scroll-right {
-  right: $unit/2;
+  right: $unit;
   background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
 }
 
