--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -99,10 +99,10 @@
     <div class="home-jobs">
       <div class="mdc-layout-grid equal-height home-shortlist">
         <div class="scroll-button scroll-left">
-          <span class="fal fa-chevron-circle-left fa-3x"></span>
+          <span class="fas fa-chevron-circle-left fa-3x"></span>
         </div>
         <div class="scroll-button scroll-right">
-          <span class="fal fa-chevron-circle-right fa-3x"></span>
+          <span class="fas fa-chevron-circle-right fa-3x"></span>
         </div>
         <div class="mdc-layout-grid__inner scrolling-grid">
           {{#compare data.supplimentaryResponses.shortlist_open.hits.total ">" 0}}
