--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2207,7 +2207,8 @@ form.inline-form {
   display: flex;
   align-items: center;
   align-self: center;
-  width: $unit*3;
+  justify-content: center;
+  width: $unit*4;
   z-index: 2;
   opacity: 0.7;
   transition: opacity .1s ease-in-out;
